--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project-2-change-this-to-your-project-name",
+  "name": "mongoose-recipes",
   "version": "0.0.0",
   "private": true,
   "scripts": {
